// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IndicatorStyled /> should render the component with default color 1`] = `
<StyledComponent
  forwardedClass={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "IndicatorStyled-gdbqw4-0",
        "isStatic": false,
        "rules": Array [
          "display:inline-block;position:relative;[type='checkbox'],[type='checkbox']{position:absolute;visibility:hidden;+ label{cursor:pointer;flex-direction:row;align-items:center;display:flex;&:before{border:1px solid ",
          [Function],
          ";background:",
          [Function],
          ";margin-right:",
          [Function],
          ";width:8px;height:8px;border-radius:100%;content:' ';}}&:checked{+ label{&:before{border:1px solid ",
          [Function],
          ";background:",
          [Function],
          ";}}}}",
        ],
      },
      "displayName": "IndicatorStyled",
      "render": [Function],
      "styledComponentId": "IndicatorStyled-gdbqw4-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`<IndicatorStyled /> should render the component with passed color 1`] = `
<StyledComponent
  color="#f00"
  forwardedClass={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "IndicatorStyled-gdbqw4-0",
        "isStatic": false,
        "rules": Array [
          "display:inline-block;position:relative;[type='checkbox'],[type='checkbox']{position:absolute;visibility:hidden;+ label{cursor:pointer;flex-direction:row;align-items:center;display:flex;&:before{border:1px solid ",
          [Function],
          ";background:",
          [Function],
          ";margin-right:",
          [Function],
          ";width:8px;height:8px;border-radius:100%;content:' ';}}&:checked{+ label{&:before{border:1px solid ",
          [Function],
          ";background:",
          [Function],
          ";}}}}",
        ],
      },
      "displayName": "IndicatorStyled",
      "render": [Function],
      "styledComponentId": "IndicatorStyled-gdbqw4-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;
